web/src/css/reset.css
@utility box-focus {
	outline-color: var(--color-focus-200);
	outline-style: solid;
	outline-width: 0.2rem;
	outline-offset: 0.1rem;
}
/* Fork of https://github.com/tailwindlabs/tailwindcss/blob/main/packages/tailwindcss/preflight.css */
/**
 * 1. Prevent padding and border from affecting element width. (https://github.com/mozdevs/cssremedy/issues/4)
 * 2. Remove default margins and padding
 * 3. Reset all borders.
 */
*,
::after,
::before,
::backdrop,
::file-selector-button {
	box-sizing: border-box; /* 1 */
	margin: 0; /* 2 */
	padding: 0; /* 2 */
	border: 0 solid; /* 3 */
	border-radius: var(--radius-md); /* 3 */

	&:focus {
		@apply box-focus;
	}
}

/**
 * 1. Use a consistent sensible line-height in all browsers.
 * 2. Prevent adjustments of font size after orientation changes in iOS.
 * 3. Use a more readable tab size.
 * 4. Use the user's configured `sans` font-family by default.
 * 5. Use the user's configured `sans` font-feature-settings by default.
 * 6. Use the user's configured `sans` font-variation-settings by default.
 * 7. Disable tap highlights on iOS.
 */
:host {
	line-height: 1.5; /* 1 */
	-webkit-text-size-adjust: 100%; /* 2 */
	tab-size: 4; /* 3 */
	font-family:
		"Noto Sans", "Noto Sans Hebrew", ui-sans, system-ui, sans,
		"Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"; /* 4 */
	font-feature-settings: normal; /* 5 */
	font-variation-settings: normal; /* 6 */
	-webkit-tap-highlight-color: transparent; /* 7 */
}

/**
 * 1. Add the correct height in Firefox.
 * 2. Correct the inheritance of border color in Firefox. (https://bugzilla.mozilla.org/show_bug.cgi?id=190655)
 * 3. Reset the default border style to a 1px solid border.
 */
hr {
	height: 0; /* 1 */
	color: inherit; /* 2 */
	border-top-width: 1px; /* 3 */
}

/* Add the correct text decoration in Chrome, Edge, and Safari. */
abbr {
	text-decoration: none;
}

/* Remove the default font size and weight for headings. */
h1,
h2,
h3,
h4,
h5,
h6 {
	font-weight: inherit;
}
h1 {
	font-size: 3em;
}
h2 {
	font-size: 2.5em;
}
h3 {
	font-size: 2em;
}
h4 {
	font-size: 1.75em;
}
h5 {
	font-size: 1.5em;
}
h6 {
	font-size: 1.25em;
}
/* Add the correct font weight in Edge and Safari. */
b,
strong {
	font-weight: bolder;
}

/* Reset links to optimize for opt-in styling instead of opt-out. */
a {
	color: inherit;
	text-decoration: none;
}

/**
 * 1. Use the user's configured `mono` font-family by default.
 * 2. Use the user's configured `mono` font-feature-settings by default.
 * 3. Use the user's configured `mono` font-variation-settings by default.
 * 4. Correct the odd `em` font sizing in all browsers.
 */
code,
kbd,
samp,
pre {
	font-family:
		ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
		"Courier New", monospace; /* 1 */
	font-feature-settings: normal; /* 2 */
	font-variation-settings: normal; /* 3 */
	font-size: 1em; /* 4 */
}

/**
 * Prevent `sub` and `sup` elements from affecting the line height in all
 * browsers.
 */
sub,
sup {
	font-size: 66%;
	line-height: 0;
	position: relative;
	vertical-align: baseline;
}
sub {
	bottom: -0.25em;
}
sup {
	top: -0.5em;
}

/**
 * 1. Remove text indentation from table contents in Chrome and Safari. (https://bugs.chromium.org/p/chromium/issues/detail?id=999088, https://bugs.webkit.org/show_bug.cgi?id=201297)
 * 2. Correct table border color inheritance in all Chrome and Safari. (https://bugs.chromium.org/p/chromium/issues/detail?id=935729, https://bugs.webkit.org/show_bug.cgi?id=195016)
 * 3. Remove gaps between table borders by default.
 */
table {
	text-indent: 0; /* 1 */
	border-color: inherit; /* 2 */
	border-collapse: collapse; /* 3 */
}

/**
 * Remove the additional `:invalid` styles in Firefox.
 * https://github.com/mozilla/gecko-dev/blob/2f9eacd9d3d995c937b4251a5557d95d494c9be1/layout/style/res/forms.css#L728-L737
 */
:-moz-ui-invalid {
	box-shadow: none;
}

/**
 * Reset the default input placeholder opacity in Firefox.
 * https://github.com/tailwindlabs/tailwindcss/issues/3300
 */
::placeholder {
	opacity: 1;
}

/** Add the correct vertical alignment in Chrome and Firefox. */
progress {
	vertical-align: baseline;
}

/** Make lists unstyled by default. */
ol,
ul,
menu {
	list-style: none;
}

/**
 * 1. Make replaced elements `display: block` by default.
 *    https://github.com/mozdevs/cssremedy/issues/14
 * 2. Add `vertical-align: middle` to align replaced elements more sensibly by
 *   default.
 *   https://github.com/jensimmons/cssremedy/issues/14#issuecomment-634934210
 */
img,
svg,
video,
canvas,
audio,
iframe,
embed,
object {
	display: block; /* 1 */
	vertical-align: middle; /* 2 */
}

/**
 * Constrain images and videos to the parent width and preserve their
 * intrinsic aspect ratio. https://github.com/mozdevs/cssremedy/issues/14
 */
img,
video {
	max-width: 100%;
	height: auto;
}

/**
 * 1. Inherit font styles in all browsers.
 * 2. Remove border radius in all browsers.
 * 3. Remove background color in all browsers.
 * 4. Ensure consistent opacity for disabled states in all browsers.
 */
button,
input,
select,
optgroup,
textarea,
::file-selector-button {
	font: inherit; /* 1 */
	font-feature-settings: inherit; /* 1 */
	font-variation-settings: inherit; /* 1 */
	letter-spacing: inherit; /* 1 */
	color: inherit; /* 1 */
	background-color: transparent; /* 3 */
	opacity: 1; /* 4 */
}

/** Prevent resizing textareas horizontally by default. */
textarea {
	resize: vertical;
}

/** Correct the inability to style the border radius in iOS Safari. */
button,
input:where([type="button"], [type="reset"], [type="submit"]),
::file-selector-button {
	appearance: button;
	cursor: pointer;
}

/* Correct the cursor style of increment and decrement buttons in Safari. */
::-webkit-inner-spin-button,
::-webkit-outer-spin-button {
	height: auto;
}

/* Form controls */
select {
	background: var(--color-bg-50);
	width: --spacing(32);
}
button {
	padding: --spacing(2);
	align-items: center;
	background: var(--color-bg-100);

	&:hover,
	&.active {
		background: var(--color-bg-200);
	}
}

@utility thumb-focus {
	outline-offset: --spacing(4);
	outline-width: 4px;
}
@utility track {
	background: var(--color-secondary);
	height: 0.5em;
}
@utility thumb {
	background: var(--color-fg-50);
	border: --spacing(3);
	border-radius: var(--radius-lg);
	height: 1em;
	width: 1em;
}
input[type="range"] {
	appearance: none;
	background: transparent;
	cursor: pointer;
	padding: --spacing(2) 0;

	&:focus {
		/* outline: none; */
		&::-webkit-slider-thumb {
			@apply thumb-focus;
		}
		&::-moz-range-thumb {
			@apply thumb-focus;
		}
	}

	&::-webkit-slider-runnable-track {
		@apply track;
	}
	&::-moz-range-track {
		@apply track;
	}

	&::-webkit-slider-thumb {
		appearance: none;
		margin-top: -0.25em;
		@apply thumb;
	}
	&::-moz-range-thumb {
		border: none;
		@apply thumb;
	}
}
/* https://moderncss.dev/pure-css-custom-checkbox-style/ */
input[type="checkbox"] {
	appearance: none;
	cursor: pointer;

	width: 1.2em;
	aspect-ratio: 1 / 1;
	border: 0.1em solid currentColor;
	transform: translateY(-0.075em);

	display: inline-flex;
	align-items: center;
	justify-content: center;

	&::before {
		content: "";

		height: 70%;
		aspect-ratio: 1 / 1.75;
		border: 0.2rem solid var(--color-fg-50);
		border-top: none;
		border-left: none;

		visibility: hidden;
		transform: translateY(-0.1em) rotate(35deg);
	}
	&:checked::before {
		visibility: visible;
	}

	&:checked {
		background-color: var(--color-secondary);
	}
}

select {
	--arrow-icon: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24"><path fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m6 9l6 6l6-6"/></svg>');
	--select-bg: var(--color-bg-100);
	--arrow-bg: var(--color-bg-200);
	--arrow-width: --spacing(8);
	appearance: none;
	padding: --spacing(2);
	background:
		var(--arrow-icon) no-repeat right --spacing(1) center / 1.4em,
		linear-gradient(to left, var(--arrow-bg) var(--arrow-width), var(--select-bg) var(--arrow-width));
	cursor: pointer;
	option {
		color: inherit;
		background-color: var(--select-bg);
	}
}
form.table {
	& > * {
		width: 100%;
		display: flex;
		justify-content: space-between;
		align-items: baseline;
		padding: --spacing(1) --spacing(4);

		& > div {
			display: flex;
			align-items: center;
			gap: --spacing(2);
		}
	}

	& > *:hover {
		background: var(--color-bg-100);
	}
}

